# openmedia-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  onpkg.json
.cargo/: config.toml
.github/workflows/: release.yml
assets/: logo_reveal_timeline.json
crates/openmedia-animate/src/: lib.rs
crates/openmedia-core/: Cargo.toml
crates/openmedia-core/src/: hardware.rs  lib.rs  models.rs  progress.rs
crates/openmedia-improve/: Cargo.toml
crates/openmedia-improve/src/: lib.rs
crates/openmedia-mcp/: Cargo.toml
crates/openmedia-mcp/examples/: generate_promo.rs  render_promo.rs
crates/openmedia-mcp/src/: lib.rs  main.rs
crates/openmedia-mcp/tests/: mcp_image_tests.rs  mcp_improve_tests.rs  mcp_video_tests.rs
crates/openmedia-process/: Cargo.toml
crates/openmedia-process/src/: cpu.rs  gpu.rs  lib.rs
crates/openmedia-svg/: Cargo.toml
crates/openmedia-svg/src/: chart.rs  lib.rs
crates/openmedia-svg/tests/: chart_tests.rs
crates/openmedia-video/: Cargo.toml
crates/openmedia-video/examples/: test_chrome.rs
crates/openmedia-video/src/: lib.rs
docs/: CORE.md  IMPLEMENTATION_PLAN.md  SPEC.md  TODO.md
docs/superpowers/plans/: 2026-06-23-audio-overlays.md  2026-06-23-mermaid-extensions.md  2026-06-23-pre-designed-video-templates.md  2026-06-23-svg-diagram-chart-icon-engine.md  2026-06-24-custom-font-loading.md  2026-06-24-custom-transitions.md  2026-06-25-transitions-and-charts.md
docs/superpowers/specs/: 2026-06-23-audio-overlays-design.md  2026-06-24-custom-font-loading-design.md  2026-06-24-custom-transitions-design.md  2026-06-25-transitions-charts-design.md
onpkg_docs/: INDEX.md  openmedia.md
