[package]
name = "openmedia-svg"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
openmedia-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

uuid = { workspace = true }
serde_json = { workspace = true }
svg = { version = "0.17" }
resvg = { version = "0.44" }
