[package]
name = "openmedia-video"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
openmedia-core = { workspace = true }
openmedia-svg = { workspace = true }
openmedia-animate = { workspace = true }
openmedia-process = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }
async-trait = { workspace = true }

resvg = { version = "0.44" }
tiny-skia = { version = "0.11" }
chromiumoxide = { version = "0.7", features = ["async-std-runtime"] } # or tokio runtime if available, async-std-runtime is commonly used
symphonia = { version = "0.5", features = ["all"] }
